--- a/tool/templates/index.html
+++ b/tool/templates/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-  <title>React Test</title>
+  <title></title>
 </head>
 <body>
-  Hello!
   <div id="root">
   </div>
   <script src="{{url_for('static', filename='index.js')}}"></script>
